# omg-tools

./: .gitignore  .select_examples.py  .travis.yml  CMakeLists.txt  csplines-test omg-tools  ex_holonomic.py  ex_quadrotor.py  overview_spline_sprint.md  package.xml  readme.md  readme.tex  setup.cfg  setup.py  todo.txt
casadi/: casadi.py
examples/: annoying_obstacle.py  big_warehouse.py  compare_buildoptions.py  compare_buildoptions_distributed.py  compare_distr_centr_quadrotors.py  compare_distr_opt_quadrotors.py  compare_distributed_methods.py  compare_distributed_optimization_quadrotors.py  compare_distributed_vs_central_quadrotors.py  compare_distristrubeted_vs_central_quadrotors.py  deployer_example.py  deployer_example_dangerzone.py  deployer_example_multiframe.py  distributed_payload_transport.py  environment.pickle  ex_formation_holonomic.py  ex_formation_quadrotor.py  ex_holonomic.py  ex_quadrotor.py  ex_questionmark.py  flexonomy.py  formation_dubins.py  formation_holonomic.py  formation_holonomic_central.py  formation_holonomic_dd.py  formation_holonomic_export.py  formation_holonomic_multiproblem.py  formation_holonomic_rca.py  formation_p2pcentral_quadrotor_3d.py  formation_quadrotor.py  formation_quadrotor_rotating_wall.py  formation_revolving_door.py  log_analyze.py  lvd_case.py  multiproblem.py  p2p_3dquadrotor.py  p2p_3dquadrotor_sqp.py  p2p_agv.py  p2p_agv2.py  p2p_agv_sqp.py  (+79 more)
examples/GCode/: anchor2D.nc
examples/GCode_examples/: Star.nc  Star_shift_scale.nc  anchor2D.nc  benchmark_stair.nc  bspline_to_bezier.py  convert_gcode.py  gcode_N_example.py  gcode_helpers.py  gcode_solution_anchor_G01.nc  gcode_solution_anchor_G05.nc  gcodeproblem_anchor.py  gcodeproblem_benchmark_stair.py  gcodeproblem_multi_z.py  gcodeproblem_racetrack.py  gcodeproblem_rsq5.py  gcodeproblem_star.py  racetrack.nc  rsq3.nc  rsq5.nc  rsq5_multi.nc  smallAnchor2D.nc  square.nc  visualize_cubic_bspline.py  z-movement.nc
examples/benchmark_examples/: formation_dubins.py  formation_holonomic.py  lineq_check.py  numeric_operations.py  p2p_3dquadrotor.py  p2p_agv.py  p2p_agv2.py  p2p_bicycle.py  p2p_dubins.py  p2p_holonomic.py  p2p_holonomic_orient.py  platform_landing.py  revolving_door.py
examples/dronekit_example/: readme.md
examples/formation/: instructions.txt
examples/gui_examples/: ICRA_example1.pickle  ICRA_example1.py  ICRA_example1_dubins.py  ICRA_example2.py  environment.pickle  p2p_multiframeproblem_gui.py  schedulerproblem_example_gui.py  schedulerproblem_example_gui1.py  schedulerproblem_example_gui2.py  vast_environment_example1.py  vast_environment_example1_dubins.py  vast_environment_example2.py  vast_environment_example_maze.pickle  vast_environment_example_maze.py
examples/notworking/: compare_buildoptions.py  formation_holonomic_export.py  rendezvous_holonomic_export.py
examples/ros_example/: readme.md
examples/ros_example/src/p3dx_description/: CMakeLists.txt  package.xml
examples/ros_example/src/p3dx_description/launch/: rviz.launch
examples/ros_example/src/p3dx_description/urdf/: materials.xacro  pioneer3dx.gazebo  pioneer3dx.xacro  pioneer3dx.xml  pioneer3dx_wheel.xacro
examples/ros_example/src/p3dx_gazebo/: CMakeLists.txt  package.xml
examples/ros_example/src/p3dx_gazebo/launch/: gazebo.launch  one_robot.launch
examples/ros_example/src/p3dx_gazebo/worlds/: p3dx.world
examples/ros_example/src/p3dx_motionplanner/: CMakeLists.txt  package.xml
examples/ros_example/src/p3dx_motionplanner/launch/: motionplanner.launch
examples/ros_example/src/p3dx_motionplanner/msg/: FleetTrajectories.msg  Obstacle.msg  P3DXPose.msg  P3DXTrajectory.msg  Room.msg  Settings.msg  Trigger.msg
examples/ros_example/src/p3dx_motionplanner/src/: controller.py  motionplanner.py
examples/test_examples/: formation_dubins.py  p2p_3dquadrotor.py  p2p_bicycle.py  p2p_dubins.py  p2p_holonomic.py  platform_landing.py  revolving_door.py
examples/teter/: test_p2p.cpp
lib/pkgconfig/: casadi.pc  casadi_compiler_clang.pc  casadi_compiler_shell.pc  casadi_integrator_collocation.pc  casadi_integrator_cvodes.pc  casadi_integrator_idas.pc  casadi_integrator_rk.pc  casadi_linsol_csparse.pc  casadi_linsol_csparsecholesky.pc  casadi_linsol_lapacklu.pc  casadi_linsol_lapackqr.pc  casadi_linsol_symbolicqr.pc  casadi_nlpsol_ipopt.pc  casadi_nlpsol_scpgen.pc  casadi_nlpsol_sqpmethod.pc  casadi_nlpsol_worhp.pc  casadi_qpsol_cplex.pc  casadi_qpsol_gurobi.pc  casadi_qpsol_nlpsol.pc  casadi_qpsol_qpoases.pc  casadi_rootfinder_kinsol.pc  casadi_rootfinder_newton.pc  casadi_rootfinder_nlpsol.pc  casadi_sundials_common.pc  casadi_xmlfile_tinyxml.pc
lvd/: lvd_case.py  lvd_case_remarks.txt  lvd_fap.py  lvd_problem_creator.py
motionplanning/: __init__.py  admm.py  codegeneration.py  distributedproblem.py  environment.py  export.py  fleet.py  formation.py  holonomic.py  mycolors.py  optilayer.py  piecewise.py  plant.py  platform.py  plots.py  point2point.py  point2pointproblem.py  problem.py  quadrotor.py  rendezvous.py  shape.py  spline.py  spline_extra.py  test_adjoint_tf.py  test_dual_init.py  vehicle.py
omgtools/: __init__.py  environment.py  export.py  formation.py  holonomic.py  platform.py  plots.py  point2point.py  problem.py  quadrotor.py  shape.py  spline.py  spline_extra.py  vehicle.py
omgtools/basics/: __init__.py  dummy_layer.py  geometry.py  optilayer.py  shape.py  shape_HolonomicF.py  spline.py  spline_extra.py  splines.py
omgtools/environment/: __init__.py  dangerzone.py  environment.py  frame.py  gui.py  obstacle.py
omgtools/execution/: __init__.py  deployer.py  plotlayer.py  simulator.py
omgtools/export/: __init__.py  export.py  export_admm.py  export_formation.py  export_p2p.py  export_rendezvous.py
omgtools/gui/: __init__.py  gcode_block.py  gcode_reader.py  gui.py  svg_reader.py
omgtools/problems/: __init__.py  admm.py  admm_payload.py  (+21 more)
tests/: test_examples.py
(+103 files in other folders)
