<?xml version="1.0"?>
<package format="2">
  <name>omgtools</name>
  <version>0.1.0</version>
  <description>The omgtools package</description>

  <maintainer email="todo@todo.be">Maintainer</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
