<?xml version="1.0"?>
<package>
  <name>p3dx_motionplanner</name>
  <version>0.0.0</version>
  <description>The p3dx_motionplanner package</description>
  <maintainer email="ruben.vanparys@kuleuven.be">ruben</maintainer>
  <license>LGPLv3</license>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
    <!-- <build_type>cmake</build_type> -->
  </export>
</package>
